update failed   h school login